--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -97,6 +97,10 @@ window#waybar {
   margin: 0px 15px 0px 10px;
 }
 
+#window {
+  color: @textcolor;
+}
+
 /* -----------------------------------------------------
  * Clock
  * ----------------------------------------------------- */
