--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -162,18 +162,18 @@ window#waybar {
 
 @keyframes blink {
   to {
-    background-color: @backgroundlight;
-    color: @textcolor2;
+    /* background-color: @backgroundlight; */
+    color: @textcolor;
   }
 }
 
 #battery.critical:not(.charging) {
   color: #f53c3c;
-  /* animation-name: blink;
+  animation-name: blink;
   animation-duration: 0.5s;
   animation-timing-function: linear;
   animation-iteration-count: infinite;
-  animation-direction: alternate; */
+  animation-direction: alternate;
 }
 
 /* -----------------------------------------------------
