--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -28,7 +28,8 @@
  * ----------------------------------------------------- */
 
 * {
-  /* font-family: "Droid Sans Mono", "monospace", monospace; */
+  font-family: "Cantarell";
+  font-size: 15px;
   border: none;
   border-radius: 0px;
   padding: 0;
@@ -48,7 +49,6 @@ window#waybar {
 #workspaces {
   margin: 0px 7px 0px 3px;
   border: 0px;
-  font-size: 15px;
   color: @textcolor1;
 }
 
@@ -101,14 +101,18 @@ window#waybar {
   color: @textcolor;
 }
 
+#custom-playerctl {
+  color: @textcolor;
+  margin-left: 15px;
+}
+
 /* -----------------------------------------------------
  * Clock
  * ----------------------------------------------------- */
 
 #clock {
-  font-size: 17.5px;
   color: @textcolor;
-  margin: 5px 0px 5px 0px;
+  margin-right: 15px;
 }
 
 /* -----------------------------------------------------
@@ -116,7 +120,6 @@ window#waybar {
  * ----------------------------------------------------- */
 
 #pulseaudio {
-  font-size: 15px;
   color: @textcolor;
   border-radius: 15px;
   margin: 2.5px 15px 0px 0px;
@@ -131,7 +134,6 @@ window#waybar {
  * ----------------------------------------------------- */
 
 #network {
-  font-size: 15px;
   color: @textcolor;
   border-radius: 15px;
   margin: 2.5px 15px 0px 0px;
@@ -150,7 +152,6 @@ window#waybar {
  * ----------------------------------------------------- */
 
 #battery {
-  font-size: 15px;
   color: @textcolor;
   background-color: transparent;
   margin: 2.5px 15px 0px 0px;
