--- a/wofi/.config/wofi/style.css
+++ b/wofi/.config/wofi/style.css
@@ -6,7 +6,7 @@
   background-color: #272d38;
   border: 2px solid;
   border-radius: 0px;
-  opacity: 0.85;
+  /*opacity: 0.85;*/
 }
 
 #outer-box {
