--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -1,189 +1,213 @@
-/*
- * __        __          _                  ____  _         _       
- * \ \      / /_ _ _   _| |__   __ _ _ __  / ___|| |_ _   _| | ___  
- *  \ \ /\ / / _` | | | | '_ \ / _` | '__| \___ \| __| | | | |/ _ \ 
- *   \ V  V / (_| | |_| | |_) | (_| | |     ___) | |_| |_| | |  __/ 
- *    \_/\_/ \__,_|\__, |_.__/ \__,_|_|    |____/ \__|\__, |_|\___| 
- *                 |___/                              |___/         
- *  
- * ----------------------------------------------------- 
-*/
-
-/* -----------------------------------------------------
- * Import Pywal colors 
- * ----------------------------------------------------- */
-/* @import 'style-light.css'; */
-@define-color backgroundlight #FFFFFF;
-@define-color backgrounddark #FFFFFF;
-@define-color workspacesbackground1 #FFFFFF;
-@define-color workspacesbackground2 #CCCCCC;
-@define-color bordercolor #FFFFFF;
-@define-color textcolor1 #000000;
-@define-color textcolor2 #000000;
-@define-color textcolor3 #FFFFFF;
-@define-color iconcolor #FFFFFF;
-
-/* -----------------------------------------------------
- * General 
- * ----------------------------------------------------- */
-
 * {
-  font-family: "Cantarell";
-  font-size: 15px;
-  border: none;
-  border-radius: 0px;
-  padding: 0;
-  margin: 0;
+  /* `otf-font-awesome` is required to be installed for icons */
+  /*font-family: FontAwesome, "SK-Modernist", sans-serif;*/
+  font-family: "Cantarell", MesloLGS NF;
+  font-size: 14px;
+  font-weight: 500;
 }
 
 window#waybar {
-  background-color: rgba(0, 0, 0, 0.4);
-  border-bottom: 0px solid #ffffff;
-  transition-property: background-color;
-  transition-duration: 0.5s;
+  background-color: transparent;
+  transition: background-color 0.5s ease-in-out;
 }
 
-/* -----------------------------------------------------
- * Workspaces 
- * ----------------------------------------------------- */
-#workspaces {
-  margin: 0px 7px 0px 3px;
-  border: 0px;
-  color: @textcolor1;
+window#waybar.hidden {
+  opacity: 0.2;
+}
+
+#waybar.empty {
+  font-weight: bold;
+}
+/*
+window#waybar.solo {
+    background-color: #FFFFFF;
+}
+*/
+
+window#waybar.termite {
+  background-color: #3f3f3f;
+}
+
+window#waybar.chromium {
+  /*background-color: #1e1e2e;*/
+  border: none;
+}
+
+button {
+  /* Use box-shadow instead of border so the text isn't offset */
+  box-shadow: inset 0 -3px transparent;
+  /* Avoid rounded borders under each button name */
+  border: none;
+  border-radius: 1px;
+}
+
+/* https://github.com/Alexays/Waybar/wiki/FAQ#the-workspace-buttons-have-a-strange-hover-effect */
+button:hover {
+  background: inherit;
+}
+
+tooltip {
+  background-color: #000000;
+  border-radius: 20px;
+  border-color: #000000;
+}
+
+tooltip label {
+  padding: 5px;
+}
+#window {
+  padding: 25px;
+  margin-top: 5px;
+}
+
+#workspaces,
+#window {
+  padding: 5px 10px;
+  color: #ffffff;
+  background: #1e1e2e;
+  border-radius: 10px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.15);
+  margin-top: 5px;
 }
 
 #workspaces button {
-  border: 0px;
-  margin: 2.5px 5px 2.5px 0px;
-  padding-left: 4px;
-  padding-right: 4px;
-  padding-top: 2px;
-  padding-bottom: 0px;
-  border-radius: 2.5px;
-  color: @textcolor3;
-  transition: all 0.5s ease-in-out;
-}
-
-#workspaces button.active {
-  color: @textcolor1;
-  background: @workspacesbackground2;
+  padding: 0 5px;
+  background-color: transparent;
+  color: #ffffff;
 }
 
 #workspaces button:hover {
-  color: @textcolor1;
-  background: @workspacesbackground2;
+  background: rgba(0, 0, 0, 0.05);
+}
+
+#workspaces button.focused {
+  background-color: grey;
+  box-shadow: inset 0 -3px #ffffff;
   border-radius: 2.5px;
 }
 
-/* -----------------------------------------------------
- * Modules
- * ----------------------------------------------------- */
-
-.modules-left > widget:first-child > #workspaces {
-  margin-left: 0;
+#workspaces button.urgent {
+  background-color: #eb4d4b;
 }
 
+#workspaces button.active {
+  background: grey;
+  color: black;
+  border-radius: 2.5px;
+}
+
+#mode {
+  background-color: #64727d;
+  border-bottom: 3px solid #ffffff;
+}
+
+#clock,
+#battery,
+#cpu,
+#memory,
+#disk,
+#temperature,
+#backlight,
+#network,
+#pulseaudio,
+#wireplumber,
+#custom-playerctl,
+#tray,
+#mode,
+#idle_inhibitor,
+#scratchpad,
+#mpd,
+#keyboard-state,
+#language,
+#custom-exit,
+#custom-weather,
+#custom-updates {
+  padding: 0 10px;
+  margin-right: 5px;
+  margin-top: 5px;
+  color: #ffffff;
+  background: #1e1e2e;
+  border-radius: 10px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.15);
+}
+
+#custom-playerctl {
+  background-color: #1db954;
+}
+
+#window,
+#workspaces {
+  margin: 0 4px;
+  margin-top: 5px;
+}
+
+/* If workspaces is the leftmost module, omit left margin */
+.modules-left > widget:first-child > #workspaces {
+  margin-left: 10px;
+}
+
+/* If workspaces is the rightmost module, omit right margin */
 .modules-right > widget:last-child > #workspaces {
   margin-right: 0;
 }
 
-/* -----------------------------------------------------
- * Custom Modules
- * ----------------------------------------------------- */
-
-#custom-appmenuicon {
-  font-size: 20px;
-  color: rgba(255, 204, 102, 0.733);
-  margin: 0px 15px 0px 10px;
-}
-
-#window {
-  color: @textcolor;
-}
-
-#custom-playerctl {
-  color: @textcolor;
-  margin-left: 15px;
-}
-
-/* -----------------------------------------------------
- * Clock
- * ----------------------------------------------------- */
-
-#clock {
-  color: @textcolor;
-  margin-right: 15px;
-}
-
-/* -----------------------------------------------------
- * Pulseaudio
- * ----------------------------------------------------- */
-
-#pulseaudio {
-  color: @textcolor;
-  border-radius: 15px;
-  margin: 2.5px 15px 0px 0px;
-}
-
-#pulseaudio.muted {
-  color: @textcolor;
-}
-
-/* -----------------------------------------------------
- * Network
- * ----------------------------------------------------- */
-
-#network {
-  color: @textcolor;
-  border-radius: 15px;
-  margin: 2.5px 15px 0px 0px;
-}
-
-#network.ethernet {
-  color: @textcolor;
-}
-
-#network.wifi {
-  color: @textcolor;
-}
-
-/* -----------------------------------------------------
- * Battery
- * ----------------------------------------------------- */
-
-#battery {
-  color: @textcolor;
-  background-color: transparent;
-  margin: 2.5px 15px 0px 0px;
-}
-
-#battery.charging,
-#battery.plugged {
-  color: @textcolor;
-}
-
 @keyframes blink {
   to {
-    /* background-color: @backgroundlight; */
-    color: @textcolor;
+    background-color: #ffffff;
+    color: #000000;
   }
 }
 
-#battery.critical:not(.charging) {
-  color: #f53c3c;
-  animation-name: blink;
-  animation-duration: 0.5s;
-  animation-timing-function: linear;
-  animation-iteration-count: infinite;
-  animation-direction: alternate;
+label:focus {
+  background: #1e1e2e;
 }
 
-/* -----------------------------------------------------
- * Tray
- * ----------------------------------------------------- */
+#network {
+  color: rgb(0, 252, 152);
+}
+
+#network.disconnected {
+  color: rgb(250, 38, 51);
+}
+
+#pulseaudio.muted {
+  background-color: #90b1b1;
+  color: #2a5c45;
+}
+
+#wireplumber {
+  background-color: #fff0f5;
+  color: #000000;
+}
+
+#wireplumber.muted {
+  background-color: #f53c3c;
+}
+
+#custom-media {
+  background-color: #66cc99;
+  color: #2a5c45;
+  min-width: 100px;
+}
+
+#custom-media.custom-spotify {
+  background-color: #66cc99;
+}
+
+#custom-media.custom-vlc {
+  background-color: #ffa000;
+}
+
+#temperature {
+  background-color: #f0932b;
+}
+
+#temperature.critical {
+  background-color: #eb4d4b;
+}
 
 #tray {
-  margin: 2.5px 10px 0px 0px;
+  background-color: #2980b9;
 }
 
 #tray > .passive {
@@ -192,20 +216,85 @@ window#waybar {
 
 #tray > .needs-attention {
   -gtk-icon-effect: highlight;
-  /* background-color: #eb4d4b; */
+  background-color: #eb4d4b;
 }
 
-/* -----------------------------------------------------
- * Other
- * ----------------------------------------------------- */
-
-label:focus {
-  background-color: #000000;
+#idle_inhibitor {
+  background-color: #2d3436;
 }
 
-#backlight {
+#idle_inhibitor.activated {
+  background-color: #ecf0f1;
+  color: #2d3436;
+}
+
+#mpd {
+  background-color: #66cc99;
+  color: #2a5c45;
+}
+
+#mpd.disconnected {
+  background-color: #f53c3c;
+}
+
+#mpd.stopped {
+  background-color: #90b1b1;
+}
+
+#mpd.paused {
+  background-color: #51a37a;
+}
+
+#language {
+  padding: 0 10px;
+  /* margin: 0 5px; */
+  min-width: 16px;
+}
+
+#keyboard-state {
+  padding: 0 10px;
+  /* margin: 0 5px; */
+  min-width: 16px;
+}
+
+#keyboard-state > label {
+  padding: 0 5px;
+}
+
+#keyboard-state > label.locked {
+  background: #1e1e2e;
+}
+
+#scratchpad {
+  background: #1e1e2e;
+}
+
+#scratchpad.empty {
   background-color: transparent;
-  color: @textcolor;
-  border-radius: 15px;
-  margin: 2.5px 15px 0px 0px;
+}
+
+#privacy {
+  padding: 0;
+}
+
+#privacy-item {
+  padding: 0 5px;
+  color: white;
+}
+
+#privacy-item.screenshare {
+  background-color: #cf5700;
+}
+
+#privacy-item.audio-in {
+  background-color: #1ca000;
+}
+
+#privacy-item.audio-out {
+  background-color: #0069d4;
+}
+
+#custom-exit {
+  margin-right: 10px;
+  color: #fa3e41;
 }
