--- a/wofi/.config/wofi/style.css
+++ b/wofi/.config/wofi/style.css
@@ -4,8 +4,8 @@
 
 #window {
   background-color: #272d38;
-  border: 2px solid;
-  border-radius: 0px;
+  /*border: 2px solid;*/
+  /*border-radius: 0px;*/
   /*opacity: 0.85;*/
 }
 
